--- a/src/express/templates/ticket-edit.pug
+++ b/src/express/templates/ticket-edit.pug
@@ -5,7 +5,7 @@ block content
       .ticket-form__wrapper
         h1.ticket-form__title Редактировать публикацию
         .ticket-form__tile
-          form.ticket-form__form.form(action='#' method='post' enctype='multipart/form-data' autocomplete='off')
+          form.ticket-form__form.form(action='/offers/edit/' + offer.id method='post' enctype='multipart/form-data' autocomplete='off')
             .ticket-form__avatar-container.js-preview-container.uploaded
               .ticket-form__avatar.js-preview
                 img(src='/img/' + offer.picture.image srcset='/img/' + offer.picture.image2x alt)
@@ -37,9 +37,9 @@ block content
                   span Обязательное поле
                 .form__switch.switch
                   .switch__item
-                    input#buy-field.visually-hidden(type='radio' name='action' value='offer' checked)
+                    input#buy-field.visually-hidden(type='radio' name='action' value='offer'  checked= reviewForm.action === 'offer')
                     label.switch__button(for='buy-field') Куплю
                   .switch__item
-                    input#sell-field.visually-hidden(type='radio' name='action' value='sell')
+                    input#sell-field.visually-hidden(type='radio' name='action' value='sell' checked= reviewForm.action === 'sell')
                     label.switch__button(for='sell-field') Продам
             button.form__button.btn.btn--medium.js-button(type='submit') Сохранить
