--- a/src/express/templates/main.pug
+++ b/src/express/templates/main.pug
@@ -54,9 +54,9 @@ block content
         ul
           each offer in offers
             li.tickets-list__item
-              div(class='ticket-card ticket-card--color' + offer.picture.background)
+              div(class=`ticket-card ticket-card--color${offer.picture.background}`)
                 .ticket-card__img
-                  img(src='img/' + offer.picture.image srcset='img/' + offer.picture.image2x alt='Изображение товара')
+                  img(src=`img/${offer.picture.image}` srcset=`img/${offer.picture.image2x}`  alt='Изображение товара')
                 .ticket-card__info
                   span.ticket-card__label= offer.type === 'offer' ? 'КУПЛЮ' : 'ПРОДАМ'
                   .ticket-card__categories
@@ -64,12 +64,24 @@ block content
                       a(href='#')= category
                   .ticket-card__header
                     h3.ticket-card__title
-                      a(href='/offers/' + offer.id)= offer.title
+                      a(href=`/offers/${offer.id}`)= offer.title
                     p.ticket-card__price
                       span.js-sum= offer.sum
                       |  ₽
                   .ticket-card__desc
                     p= offer.description
+
+        .tickets-list__pagination
+          ul.pagination
+            each page in pageList
+              li
+                if page === currentPage
+                  a.active= page
+                else
+                  a(href=`/?page=${page}`)= page
+            if nextPage
+              li
+                 a(href=`/?page=${nextPage}`) дальше
     section.tickets-list
       h2.visually-hidden Самые обсуждаемые предложения
       .tickets-list__wrapper
@@ -78,9 +90,9 @@ block content
         ul
           each offer in mostTalked
             li.tickets-list__item
-              div(class='ticket-card ticket-card--color' + offer.picture.background)
+              div(class=`ticket-card ticket-card--color${offer.picture.background}`)
                 .ticket-card__img
-                  img(src='img/' + offer.picture.image srcset='img/' + offer.picture.image2x alt='Изображение товара')
+                  img(src=`img/${offer.picture.image}` srcset=`img/${offer.picture.image2x}` alt='Изображение товара')
                 .ticket-card__info
                   span.ticket-card__label= offer.type === 'offer' ? 'КУПЛЮ' : 'ПРОДАМ'
                   .ticket-card__categories
@@ -88,7 +100,7 @@ block content
                       a(href='#')= category
                   .ticket-card__header
                     h3.ticket-card__title
-                      a(href='/offers/' + offer.id)= offer.title
+                      a(href=`/offers/${offer.id}`)= offer.title
                     p.ticket-card__price
                       span.js-sum= offer.sum
                       |  ₽
