--- a/src/express/templates/my-tickets.pug
+++ b/src/express/templates/my-tickets.pug
@@ -12,7 +12,7 @@ block content
             li.tickets-list__item.js-card
               div(class=`ticket-card ticket-card--color${offer.picture.background}`)
                 .ticket-card__img
-                  img(src=`img/${offer.picture.image}` srcset=`img/${offer.picture.image2x}` alt='Изображение товара')
+                  img(src=`/img/${offer.picture.image}` srcset=`/img/${offer.picture.image2x}` alt='Изображение товара')
                 .ticket-card__info
                   span.ticket-card__label= offer.type === 'offer' ? 'КУПЛЮ' : 'ПРОДАМ'
                   .ticket-card__categories
