--- a/src/express/templates/ticket-edit.pug
+++ b/src/express/templates/ticket-edit.pug
@@ -17,12 +17,12 @@ block content
             .ticket-form__content
               .ticket-form__row
                 .form__field
-                  input#ticket-name.js-field(type='text' name='ticket-name' value= offer.title required)
-                  label(for='ticket-name') Название
+                  input#ticket-name.js-field(type='text' name='ticketName' value= offer.title required)
+                  label(for='ticketName') Название
                   span Обязательное поле
               .ticket-form__row
                 .form__field
-                  textarea#comment-field.js-field(name='comment' cols='30' rows='10' maxlength='400' minlength='50')= offer.description
+                  textarea#comment-field.js-field(name='comment' cols='30' rows='10' maxlength='400' minlength='50') #{offer.description}
                   label(for='comment-field') Описание
                   span Обязательное поле
               .ticket-form__row
@@ -36,9 +36,9 @@ block content
                   span Обязательное поле
                 .form__switch.switch
                   .switch__item
-                    input#buy-field.visually-hidden(type='radio' name='action' value='offer'  checked= reviewForm.action === 'offer')
+                    input#buy-field.visually-hidden(type='radio' name='action' value='offer'  checked= offer.offer_type.name === 'offer')
                     label.switch__button(for='buy-field') Куплю
                   .switch__item
-                    input#sell-field.visually-hidden(type='radio' name='action' value='sell' checked= reviewForm.action === 'sell')
+                    input#sell-field.visually-hidden(type='radio' name='action' value='sell' checked= offer.offer_type.name === 'sale')
                     label.switch__button(for='sell-field') Продам
             button.form__button.btn.btn--medium.js-button(type='submit') Сохранить
