--- a/src/express/templates/partials/header.pug
+++ b/src/express/templates/partials/header.pug
@@ -1,4 +1,4 @@
-header.header
+header(class=`header${isLogged ? ' header--logged' : ''}`)
   .header__wrapper
     a.header__logo.logo(href='/')
       img(src='/img/logo.svg' width='179' height='34' alt='Логотип Куплю Продам')
@@ -12,6 +12,6 @@ header.header
       input(type='search' name='query' placeholder='Поиск' aria-label='Поиск')
       .search__icon
       .search__close-btn
-    a.header__avatar.avatar(href='#')
-      img(src='img/avatar.jpg' srcset='/img/avatar@2x.jpg 2x' alt='Аватар пользователя')
-    a.header__input(href='login') Вход и регистрация
+    a.header__avatar.avatar(href='/logout')
+      img(src=`/img/${avatar}` alt='Аватар пользователя')
+    a.header__input(href='/login')  Вход и регистрация
