--- a/src/express/templates/sign-up.pug
+++ b/src/express/templates/sign-up.pug
@@ -25,6 +25,7 @@ block content
           input#user-password.js-field(type='password' name='user-password' required)
           label(for='user-password') Пароль
           span Обязательное поле
+          input(type='hidden' name='_csrf' value='#{_csrf}')
         .form__field.sign-up__field
           input#user-password-again.js-field(type='password' name='user-password-again' required)
           label(for='user-password-again') Пароль еще раз
